# eigent_search

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compare_eval.py  package-lock.json  pyproject.toml  sample_data.py  single_agent.py  single_agent_result_librarian.json  web_content_calls.json
dev/: error_analysis.ipynb  search_toolkit.ipynb
eigent_search/: __init__.py  baseline.py  config.py  minimax_m25_patch.py  orchestrator.py  tool_trajectory.py  utils.py
librarian/: __init__.py  baseline.py  evaluation.py  llm_classifier.py  model.py  prompt.py  query_toolkit.py  schema.py
notebooks/: error_analysis.ipynb  test_single_agent.ipynb
results/: cot_simpleqa_0.json  eigent_search_simpleqa_from=0_to=200_20250820_084957.json  eigent_search_simpleqa_from=0_to=200_20250820_110114.json  eigent_search_simpleqa_from=0_to=21_20250820_074230.json  eigent_search_simpleqa_from=14_to=38.json  eigent_search_simpleqa_from=14_to=40.json  eigent_search_simpleqa_from=38_to=64.json  eigent_search_simpleqa_from=40_to=64.json  lead_researcher_simpleqa_50.json  librarian_simpleqa_0.json  librarian_simpleqa_0_testing.json  plain_simpleqa_0.json  research_browsing_simpleqa_from=0_to=50.json  research_simpleqa_from=0_to=10.json  research_simpleqa_from=0_to=20.json  research_simpleqa_from=0_to=5.json  research_simpleqa_from=0_to=50.json  research_simpleqa_from=10_to=20.json  simpleqa_eval.log.example
scripts/: browsecomp_eval.py  frames_eval.py  musique_eval.py  musique_eval2.py  run_ablation_experiments.sh  run_headless.py  simpleqa_eval.py  simpleqa_eval_wsl2.py  (+4 more)
(+102 files in other folders)
