[project]
name = "eigent_search"
version = "0.0.1.dev0"
description = "Deep search agent with query processing."
authors = []
requires-python = ">=3.10,<3.13"
dependencies = [
    "camel-ai[all]>=0.2.75"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["eigent_search"]
